# Serverlink

./: CMakeLists.txt  Makefile  Makefileold  README.md  check.sh  compile.sh  configure  main.cpp  serverlink.rc  sl-ext.cpp  sl-ext.hpp
.github/workflows/: c-cpp-windows.yml  c-cpp.yml  windows-c-cpp.yml
